Ensured form looks nice on mobile and desktop sized screens. #1.

--- a/css/layout.css
+++ b/css/layout.css
@@ -20,6 +20,7 @@ body {
 .column-full,
 .column-half {
   width: 100%;
+  margin: 0;
 }
 
 .flex-direction-column {
@@ -65,6 +66,10 @@ input {
     object-fit: cover;
     margin: 0.5rem 0 0.1rem 0;
   }
+
+  .header-padding {
+    padding: 0.8rem 0;
+  }
 }
 
 img {
@@ -82,8 +87,12 @@ img {
   margin: 0;
 }
 
-.header-padding {
-  padding: 0.8rem 0;
+margin-left {
+  margin-left: 0.75rem;
+}
+
+margin-right {
+  margin-right: 0.75rem;
 }
 
 .header-font {
@@ -117,4 +126,11 @@ textarea {
 
 .padding {
   padding: 0.5rem;
+}
+
+.header-padding {
+  padding-top: 0.8rem;
+  padding-bottom: 0.8rem;
+
+  /* padding-left: 0.75rem; */
 }
